crates/tsuno-driver/tests/fixtures/snapshots/pass/uses_prelude_definitions.rs
fn main() {
    let x = 7_i32;
    //@ prelude_eq_self({x});
    //@ assert prelude_id({x}) == {x};
}
