crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_reversed_witness_in_assert.rs
fn main() {
    //@ assert 4i32 == ?x;
}
